--- a/quic.cabal
+++ b/quic.cabal
@@ -19,7 +19,8 @@ library
   build-depends:       base >= 4.7 && < 5,
                        bytestring,
                        async, 
-                       network, 
+                       network,
+                       time,
                        hashtables
   default-language:    Haskell2010
 
