--- a/quic.cabal
+++ b/quic.cabal
@@ -21,7 +21,7 @@ library
                        async, 
                        network,
                        time,
-                       hashtables
+                       containers
   default-language:    Haskell2010
 
 
