Add binary package

--- a/quic.cabal
+++ b/quic.cabal
@@ -21,6 +21,7 @@ library
                        async, 
                        network,
                        time,
+                       binary,
                        containers
   default-language:    Haskell2010
 
