Add cereal package
it will be replace binary package.
maybe the commit will be reverted .

--- a/quic.cabal
+++ b/quic.cabal
@@ -22,6 +22,7 @@ library
                        network,
                        time,
                        binary,
+                       cereal,
                        containers,
                        tls,
                        cryptonite
