--- a/quic.cabal
+++ b/quic.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Network.QUIC
+                       Network.QUIC.Types
   other-modules:       Network.QUIC.Internal
   build-depends:       base >= 4.7 && < 5,
                        bytestring,
