--- a/quic.cabal
+++ b/quic.cabal
@@ -18,6 +18,7 @@ library
                        Network.QUIC.Types
   other-modules:       Network.QUIC.Internal
                        Network.QUIC.TLS
+                       Network.QUIC.Codec
                        Network.QUIC.Time
                        Network.QUIC.Connection
                        Network.QUIC.Manager
