Add Codec subtree

--- a/quic.cabal
+++ b/quic.cabal
@@ -19,6 +19,8 @@ library
   other-modules:       Network.QUIC.Internal
                        Network.QUIC.TLS
                        Network.QUIC.Codec
+                       Network.QUIC.Codec.Put
+                       Network.QUIC.Codec.Get
                        Network.QUIC.Time
                        Network.QUIC.Connection
                        Network.QUIC.Manager
