--- a/quic.cabal
+++ b/quic.cabal
@@ -1,7 +1,7 @@
 name:                quic
 version:             0.1.0.0
 -- synopsis:
--- description:
+description:         quic implementation
 homepage:            https://github.com/keizo042/quic#readme
 license:             BSD3
 license-file:        LICENSE
