--- a/quic.cabal
+++ b/quic.cabal
@@ -46,6 +46,7 @@ test-suite quic-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , HUnit
                      , quic
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
