--- a/stack.yaml
+++ b/stack.yaml
@@ -47,10 +47,12 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- cryptonite-0.24
 - x509-1.7.2
 - x509-store-1.6.5
 - x509-validation-1.6.8
+- cryptonite-0.25
+- basement-0.0.7
+- memory-0.14.16
 
 
 
